feat: models base

--- a/LeaveMenagement.Web/appsettings.json
+++ b/LeaveMenagement.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-LeaveMenagement.Web-B37AD6D6-27B0-4AA8-9FF2-AA0EB8BF591D;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=LeaveMenagementNet6;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
